# OpenCP

./: CMakeLists.txt  OpenCP_PRJ.pro  README.md
OpenCP/: CMakeLists.txt  Calibrator.cpp  GaussianBlurIPOL.cpp  GaussianFilter.cpp  GaussianFilterSpectralRecursive.cpp  L0Smoothing.cpp  MultiCameraCalibrator.cpp  OpenCP.cmake  PermutohedralLattice.cpp  StereoBM2.cpp  StereoBase.cpp  StereoEx.cpp  StereoIterativeBM.cpp  StereoSGM2.cpp  Wiener2.cpp  adaptiveManifold.cpp  alphaBlend.cpp  arithmetic.cpp  bilateralFilter.cpp  binalyWeightedRangeFilter.cpp  bitconvert.cpp  boudaryReconstructionFilter.cpp  color.cpp  consoleImage.cpp  costVolumeFilter.cpp  crossBasedLocalFilter.cpp  crossBasedLocalMultipointFilter.cpp  csv.cpp  dct_simd.cpp  depth2disparity.cpp  depthEval.cpp  depthfilter.cpp  detailEnhancement.cpp  diffPixel.cpp  disparityFitPlane.cpp  domainTransformFilter.cpp  draw.cpp  dualBilateralFilter.cpp  dxtDenoise.cpp  fftinfo.cpp  (+48 more)
OpenCP/libGaussian/: filter_util.cpp  gaussian_conv.h  gaussian_conv_deriche.cpp  gaussian_conv_vyv.cpp
OpenCP/libimq/: imq.h  msad.cpp  mssim.cpp  wssim.cpp
cmake_conf/: OpenCP.cmake
include/: opencp.hpp
testOpenCP/: CMakeLists.txt  alphaBlendTest.cpp  analysisShow.cpp  colorCorrectionTest.cpp  fitPlaneTest.cpp  guiCrossBasedLocalFilterTest.cpp  guiEPFWeightMapTest.cpp  guiEdgePreservingFilter.cpp  guiStereoTest.cpp  guiWeightedHistogramFilterTest.cpp  main.cpp  test.hpp  testOpenCP.cmake
testOpenCP/GaussianFilter/: GaussianFilterTest.cpp
testOpenCP/bilateralfilter/: bilateralFilterTest.cpp  binalyWeightedRangeFilterTest.cpp  (+1 more)
(+18 files in other folders)
